--- a/Tugas 3 - Euler's & Fourth-Order Method.ipynb
+++ b/Tugas 3 - Euler's & Fourth-Order Method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -12,8 +12,8 @@
       "Pilih Jenis order dari runge-kutta\n",
       "1. first/Euler's\n",
       "2. fourth\n",
-      "Masukkan pilihan(1 atau 2) = 1\n",
-      "First-order runge-kutta/Eulers method\n",
+      "Masukkan pilihan(1 atau 2) = 2\n",
+      "fourth-order runge-kutta method\n",
       "Masukkan nilai h = 0.25\n",
       "Masukkan x awal = 0\n",
       "Masukkan x akhir: 1\n",
@@ -23,16 +23,16 @@
       "Nilai y awal =  1.0\n",
       "____________________________________\n",
       "Nilai x = 0.25\n",
-      "Nilai y( 0.25 ) =  1.25\n",
+      "Nilai y( 0.25 ) =  1.3368985290046593\n",
       "- - - - - - - - - - - - - - -- - - -\n",
       "Nilai x = 0.5\n",
-      "Nilai y( 0.5 ) =  1.6692627457812106\n",
+      "Nilai y( 0.5 ) =  1.890581161925207\n",
       "- - - - - - - - - - - - - - -- - - -\n",
       "Nilai x = 0.75\n",
-      "Nilai y( 0.75 ) =  2.3152625030917706\n",
+      "Nilai y( 0.75 ) =  2.7430733697549776\n",
       "- - - - - - - - - - - - - - -- - - -\n",
       "Nilai x = 1.0\n",
-      "Nilai y( 1.0 ) =  3.266261669900145\n",
+      "Nilai y( 1.0 ) =  3.999839653573154\n",
       "- - - - - - - - - - - - - - -- - - -\n"
      ]
     }
@@ -179,14 +179,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 -order runge-kutta\n"
+      "2. Fourth-Order\n"
      ]
     },
     {
@@ -223,22 +223,22 @@
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>1.250000</td>\n",
+       "      <td>1.336899</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>0.50</td>\n",
-       "      <td>1.669263</td>\n",
+       "      <td>1.890581</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>0.75</td>\n",
-       "      <td>2.315263</td>\n",
+       "      <td>2.743073</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>1.00</td>\n",
-       "      <td>3.266262</td>\n",
+       "      <td>3.999840</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -247,20 +247,23 @@
       "text/plain": [
        "     Xi         Y\n",
        "0  0.00  1.000000\n",
-       "1  0.25  1.250000\n",
-       "2  0.50  1.669263\n",
-       "3  0.75  2.315263\n",
-       "4  1.00  3.266262"
+       "1  0.25  1.336899\n",
+       "2  0.50  1.890581\n",
+       "3  0.75  2.743073\n",
+       "4  1.00  3.999840"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "print(pilihan,\"-order runge-kutta\")\n",
+    "if pilihan == '1':\n",
+    "    print (\"1. First / Euler's Method\")\n",
+    "else:\n",
+    "    print (\"2. Fourth-Order\")\n",
     "df = pd.DataFrame(data)\n",
     "df[['Xi','Y']]"
    ]
